# MPC_VDF

./: .env.example  .gitignore  Architecture.md  CLAUDE.md  NEXT_DAY_CHECKLIST.md  README.md  ZK_OPTIMISTIC_IMPLEMENTATION_CHECKLIST.md  benchmark_100_runs.sh  benchmark_failover_runs.sh  fetch_gas.js  package-lock.json  package.json  plot_metrics.py  test_vectors.json  tsconfig.json
.agents/skills/no-comments/: SKILL.md
contracts/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/circuits/: bls_commitment.circom  package-lock.json  package.json
contracts/circuits/scripts/: prove.js  setup.sh  verify.js
contracts/circuits/temp_amoy_1774465355455/: input.json  proof.json  public.json
contracts/circuits/temp_test_1774462938132/: input.json  proof.json  public.json
contracts/config/: README.md  bridges.sepolia.json
contracts/scripts/: 02_gas_metrics_run.ts  demo_amoy_axelar.ts
contracts/scripts/benchmark/: 02_gas_metrics.ts  05_mev_censorship.ts  README.md  e2e_latency.ts  local_crypto_stress.ts  postprocess_metrics.ts  request_cronjob.ts
contracts/src/: Groth16Verifier.sol  Halo2Verifier.sol  RandomReceiver.sol  RandomRouter.sol  RandomSender.sol  VDFVerifier.sol
contracts/test/: E2E_MultiBridge_ZK.test.ts  RandomReceiver.test.ts  RandomSender.test.ts  VDFVerifier.test.ts
docker/: docker-compose.yml
docker/nodes/: Dockerfile
docs/: e2e-monitor.json  e2e-monitoring.md  gas-timeseries.json
off-chain/: Cargo.toml  crypto_benchmarks.csv  crypto_summary.json  e2e_metrics.csv  e2e_metrics_v2.csv  e2e_metrics_with_gas.csv  e2e_summary.json  plot_new_charts.py
off-chain/.cargo/: config.toml
off-chain/crypto_engine/: Cargo.toml
off-chain/crypto_engine/src/: lib.rs
off-chain/crypto_engine/src/dkg/: mod.rs
off-chain/crypto_engine/src/mpc/: mod.rs
off-chain/crypto_engine/src/vdf/: adaptive.rs  mod.rs
off-chain/halo2_prover/: Cargo.toml
off-chain/halo2_prover/src/: circuit.rs  lib.rs  prover.rs
off-chain/network_module/: Cargo.toml  README.md
off-chain/network_module/config/: bridge_registry.json
off-chain/network_module/src/: bridge_registry.rs  bridges.rs  lib.rs  main.rs  relayer_factory.rs
off-chain/network_module/src/axelar/: mod.rs
off-chain/network_module/src/relayers/: dummy.rs  mod.rs  template.rs
off-chain/network_module/src/rpc/: mod.rs
off-chain/tests/: benchmark_vdf.rs  test_mpc.rs
off-chain/zk_bls_wrapper/program/: Cargo.toml
off-chain/zk_bls_wrapper/program/src/: main.rs
off-chain/zk_bls_wrapper/script/: Cargo.toml
scripts/: README_benchmark.md
scripts/benchmark/: 00_clean_outputs.sh  01_offchain_compute.sh  02_gas_metrics.ts  03_latency_breakdown.sh  04_failover_test.sh  05_mev_censorship.ts  nohup.out
scripts/plot/: ieee_style.py  plot_failover.py  plot_gas_metrics.py  plot_latency_breakdown.py  plot_mev_censorship.py  plot_offchain_compute.py
test/: README.md
test/tools/: generate_charts.py  plot_new_charts.py
(+29 files in other folders)
