[package]
name = "crypto_engine"
version.workspace = true
edition.workspace = true

[dependencies]
halo2_prover = { path = "../halo2_prover" }
halo2_proofs = "0.3"
vdf.workspace = true
classgroup.workspace = true
bls-signatures.workspace = true
blstrs.workspace = true
group.workspace = true
rand.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
tracing.workspace = true
ethers.workspace = true
