[package]
name = "halo2_prover"
version.workspace = true
edition.workspace = true

[dependencies]
# Halo2 proving system (zcash official, IPA commitments = NO trusted setup)
halo2_proofs = "0.3"

# Crypto primitives
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# EVM ABI encoding
ethers = { version = "2", features = ["abigen"] }

# Field arithmetic
ff = "0.13"

[dev-dependencies]
rand_core = "0.6"
