[package]
name = "network_module"
version.workspace = true
edition.workspace = true

[dependencies]
crypto_engine = { path = "../crypto_engine" }
tokio.workspace = true
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hex.workspace = true
